# FREAKY_3D

./: CMakeLists.txt  README.md
config/: overlay.cfg
shaders/: compile.bat  text.frag  text.vert
shaders/compiled/: overlay_frag.spv  text_frag.spv
src/: assets.cpp  assets.h  camera.cpp  camera.h  clock.cpp  clock.h  config.cpp  config.h  engine.cpp  engine.h  entity.cpp  entity.h  gfx.cpp  gfx.h  main.cpp  mesh.cpp  mesh.h  physics.h  rigid_body.h  texture.cpp  texture.h  types.h  util.cpp  util.h
src/assets/: assets.cpp  assets.h  mesh.cpp  mesh.h  texture.cpp  texture.h
src/phys/: rigid_body.cpp  rigid_body.h  simulation.cpp  simulation.h
src/ui/: base_element.cpp  base_element.h  button.cpp  button.h  container.cpp  container.h  crosshair.cpp  crosshair.h  element.cpp  element.h  overlay.cpp  overlay.h  rectangle.cpp  rectangle.h  slider.cpp  slider.h  text.cpp  text.h  text_box.cpp  text_box.h
